# galaxy-demo-app

./: .gitignore  CMakeLists.txt  Local.cmake.template  Readme.txt
Source/: Achievements.cc  Achievements.h  App.cc  App.h  Demo.cc  EventType.h  Game.cc  Game.h  GameContext.cc  GameContext.h  GameplayData.cc  GameplayData.h  IObserver.h  Input.cc  Input.h  Kbhit.h  Leaderboards.cc  Leaderboards.h  Listeners.cc  Listeners.h  Observable.cc  Observable.h  Statistics.cc  Statistics.h
cmake/: project.vcxproj.user.in
cmake/modules/: FindGLEW.cmake  FindGalaxy.cmake  FindJsonCpp.cmake  FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake
dep/osx/glew/lib/: libGLEW.dylib  libGLEWmx.dylib
dep/win/jsoncpp/lib/: jsoncpp-d.lib  jsoncpp.lib
publishing/: Jenkinsfile  changelog  get_last_version_info.py  update_game_package.py
src/: CMakeLists.txt
src/engine/: CMakeLists.txt
src/engine/core/: ResourceManager.h  SDLResourceManager.cc  SDLResourceManager.h
src/engine/gamelogic/: GameLogic.cc  GameLogic.h
src/engine/networking/: AbstractClient.cc  AbstractClient.h  AbstractServer.cc  AbstractServer.h  NetworkingEngine.cc  NetworkingEngine.h
src/engine/physics/: PhysicsEngine.cc  PhysicsEngine.h
src/engine/renderer/: AbstractRenderer.h  Camera.cc  Camera.h  Color.cc  Color.h  OGLRenderer.cc  OGLRenderer.h  Renderer.h  Sprite.cc  Sprite.h
src/engine/serialize/: JsonSerializable.h  JsonSerializer.cc  JsonSerializer.h
src/engine/system/: Button.cc  Button.h  GUIElement.h  SDLWindow.cc  SDLWindow.h  Window.h
src/engine/utils/: NonCopyable.h
src/game/: Achievements.cc  Achievements.h  Application.cc  Application.h  CMakeLists.txt  GalaxyDemo.cc  GalaxyDemo.h  GameManager.cc  GameManager.h  GameObject.cc  GameObject.h  GameplayData.cc  GameplayData.h  Gogtron.cc  Gogtron.h  IGame.h  Leaderboards.cc  Leaderboards.h  Main.cc  Player.cc  Player.h  Statistics.cc  Statistics.h  TailPart.cc  TailPart.h
src/game/messages/: GameResults.cc  GameResults.h  GameTick.cc  GameTick.h  InitGame.cc  InitGame.h  Ready.cc  Ready.h  UpdateDirection.cc  UpdateDirection.h
src/game/networking/: ChatRoom.cc  ChatRoom.h  Client.cc  Client.h  IClient.h  ILobby.h  IServer.h  Lobby.cc  Lobby.h  LobbyEvent.h  Server.cc  Server.h
src/game/scene/: ChatView.cc  ChatView.h  CloudStorageView.cc  CloudStorageView.h  Game.cc  Game.h  GameState.h  InitFailedView.cc  InitFailedView.h  InsideLobbyMenu.cc  InsideLobbyMenu.h  JoinLobbyMenu.cc  JoinLobbyMenu.h  LeaderboardsView.cc  LeaderboardsView.h  LobbyMenu.cc  LobbyMenu.h  RemoteStorageView.cc  RemoteStorageView.h  Results.cc  Results.h  SinglePlayerView.cc  SinglePlayerView.h  StartMenu.cc  StartMenu.h  StatsView.cc  StatsView.h
src/server/: CMakeLists.txt  DedicatedServer.cc  DedicatedServer.h  LobbyHost.cc  LobbyHost.h  LobbyHostManager.cc  LobbyHostManager.h  Main.cc
