cmake_minimum_required(VERSION 2.8)

Project(Demo)

FILE(GLOB SOURCE_FILES Source/*.h Source/*.cc CMakeLists.txt)

ADD_EXECUTABLE(Demo ${SOURCE_FILES})

IF(WIN32)
	SET(OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Debug)
ELSE()
	SET(OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
ENDIF()

SET(DEVELOPMENT_KIT_DIRECTORY ${CMAKE_SOURCE_DIR}/DevelopmentKit)

INCLUDE_DIRECTORIES(${DEVELOPMENT_KIT_DIRECTORY}/Include)

IF(WIN32)
	ADD_LIBRARY(Galaxy STATIC IMPORTED )
    SET_TARGET_PROPERTIES( Galaxy PROPERTIES IMPORTED_LOCATION ${DEVELOPMENT_KIT_DIRECTORY}/Libraries/Galaxy.lib )
ELSEIF(APPLE)
	ADD_LIBRARY(Galaxy SHARED IMPORTED )
	SET_TARGET_PROPERTIES( Galaxy PROPERTIES IMPORTED_LOCATION ${DEVELOPMENT_KIT_DIRECTORY}/Libraries/libGalaxy.dylib )
ELSE()
	ADD_LIBRARY(Galaxy SHARED IMPORTED )
	SET_TARGET_PROPERTIES( Galaxy PROPERTIES IMPORTED_LOCATION ${DEVELOPMENT_KIT_DIRECTORY}/Libraries/libGalaxy.so )
ENDIF()

TARGET_LINK_LIBRARIES(Demo Galaxy)

ADD_CUSTOM_COMMAND(TARGET Demo POST_BUILD
	COMMAND ${CMAKE_COMMAND} -E copy_directory ${DEVELOPMENT_KIT_DIRECTORY}/Libraries ${OUTPUT_DIRECTORY}
	COMMENT "copying galaxy libraries into binary output directory"
)